Remove "local" theme:
Just trying to get Github to be OK with a non-default theme.

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ github_username:  inneralien
 # Build settings
 markdown: kramdown
 remote_theme: chesterhow/tale
-theme: tale
+#theme: tale
 plugins:
   - jekyll-feed
 
