--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ github_username:  inneralien
 
 # Build settings
 markdown: kramdown
-remote_theme: chesterhow/tale
+#remote_theme: chesterhow/tale
 #theme: tale
 plugins:
   - jekyll-feed
